<resources>
    <string name="app_name">Meu Remédio</string>
    <string name="mapa">Mapa</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>

    <string name="action_settings">Opções</string>

    <string name="procurar">Procurar</string>
    <string name="menu_search">Busca</string>
    <string name="search_hint">Qual remédio procura?</string>
    <string name="remedios">Remédios</string>
    <string name="farmacias">Farmácias</string>
    <string name="historico">Histórico</string>
    <string name="meus_favoritos">Meus Favoritos</string>
    <string name="suporte">Suporte</string>
    <string name="ajuda">Ajuda</string>
    <string name="sair">Sair</string>
    <string name="title_activity_mapa_busca">Encontrar&#8230;</string>
    <string name="title_activity_login">Melhor Preço</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
